Updates testing for refactoring

--- a/spec/fixtures/vcr_cassettes/New_Party_Creation/_sad-path/Name_field_-_blank.yml
+++ b/spec/fixtures/vcr_cassettes/New_Party_Creation/_sad-path/Name_field_-_blank.yml
@@ -31,26 +31,26 @@ http_interactions:
       X-Memc-Key:
       - 4f4d3badf3c9d576e4abc7160d5da6a0
       X-Memc-Age:
-      - '6778'
+      - '13020'
       X-Memc-Expires:
-      - '15737'
+      - '14742'
       Date:
-      - Fri, 01 Dec 2023 22:35:21 GMT
+      - Mon, 11 Dec 2023 22:02:00 GMT
       Etag:
-      - W/"571ab4f4b50d676093ea10eaf4708063"
+      - W/"78f16e65cea04823f11a7aac88249574"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - RefreshHit from cloudfront
       Via:
-      - 1.1 ec99de6a8df96b4e008b942ab98e6594.cloudfront.net (CloudFront)
+      - 1.1 801c4cdd177872a11b03f54a2b3b464e.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - SLC50-C1
+      - SFO53-C1
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - vv7YAfo1yrQj5wNq7VJyRiVPftZc4lUQqcjcbJUCLwVYUZF0ydUZog==
+      - Zi2ldYgEkW1ujbQBm98g4chFuzN1QYccxJjwco6wJ0z7QF8JRMz2KA==
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
@@ -59,11 +59,11 @@ http_interactions:
         fictional Italian-American Corleone crime family. When organized crime family
         patriarch, Vito Corleone barely survives an attempt on his life, his youngest
         son, Michael steps in to take care of the would-be killers, launching a campaign
-        of bloody revenge.","popularity":153.632,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
+        of bloody revenge.","popularity":203.45,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
-        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.708,"vote_count":19034}'
-  recorded_at: Fri, 01 Dec 2023 22:35:21 GMT
+        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.709,"vote_count":19085}'
+  recorded_at: Mon, 11 Dec 2023 22:02:00 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/238?api_key=c5d87ff6f6c9e5b4d80f024fe25ecdf9
@@ -95,26 +95,26 @@ http_interactions:
       X-Memc-Key:
       - 4f4d3badf3c9d576e4abc7160d5da6a0
       X-Memc-Age:
-      - '6778'
+      - '13020'
       X-Memc-Expires:
-      - '15737'
+      - '14742'
       Date:
-      - Fri, 01 Dec 2023 22:35:21 GMT
+      - Mon, 11 Dec 2023 22:02:01 GMT
       Etag:
-      - W/"571ab4f4b50d676093ea10eaf4708063"
+      - W/"78f16e65cea04823f11a7aac88249574"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - RefreshHit from cloudfront
       Via:
-      - 1.1 8c71f944838e56d18361877af4839d5e.cloudfront.net (CloudFront)
+      - 1.1 0da7848263e39308b12bac6a925793b0.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - SLC50-C1
+      - SFO53-C1
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - k5P0af4MgkxZQ2JiGeX5lFSYE7DxYXkKdRsnYF__M8RBojjnby7wqg==
+      - CPjiC-bZV2QIzbuYiYJ9-HgALRH0CxLLAwB4wZP4W7fIEhIqZIuU6g==
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
@@ -123,11 +123,11 @@ http_interactions:
         fictional Italian-American Corleone crime family. When organized crime family
         patriarch, Vito Corleone barely survives an attempt on his life, his youngest
         son, Michael steps in to take care of the would-be killers, launching a campaign
-        of bloody revenge.","popularity":153.632,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
+        of bloody revenge.","popularity":203.45,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
-        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.708,"vote_count":19034}'
-  recorded_at: Fri, 01 Dec 2023 22:35:21 GMT
+        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.709,"vote_count":19085}'
+  recorded_at: Mon, 11 Dec 2023 22:02:01 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/238?api_key=c5d87ff6f6c9e5b4d80f024fe25ecdf9
@@ -159,26 +159,26 @@ http_interactions:
       X-Memc-Key:
       - 4f4d3badf3c9d576e4abc7160d5da6a0
       X-Memc-Age:
-      - '6778'
+      - '13020'
       X-Memc-Expires:
-      - '15737'
+      - '14742'
       Date:
-      - Fri, 01 Dec 2023 22:35:21 GMT
+      - Mon, 11 Dec 2023 22:02:01 GMT
       Etag:
-      - W/"571ab4f4b50d676093ea10eaf4708063"
+      - W/"78f16e65cea04823f11a7aac88249574"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - RefreshHit from cloudfront
       Via:
-      - 1.1 41b8cfb6434b49744c4c497f1135d9e0.cloudfront.net (CloudFront)
+      - 1.1 2509c74f5f6cfb0d8a2f556b68170b28.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - SLC50-C1
+      - SFO53-C1
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - FzrvILZlu5j-OgPYph5imJDQmOvvkpxThU0S7q1YMZWXcZQbt_XRHQ==
+      - FBtuoJ5M9PNMUxkM3Cj6v7MCpSnWmAhCkPVEfm0ondX7_bGhJ3dnkA==
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
@@ -187,9 +187,9 @@ http_interactions:
         fictional Italian-American Corleone crime family. When organized crime family
         patriarch, Vito Corleone barely survives an attempt on his life, his youngest
         son, Michael steps in to take care of the would-be killers, launching a campaign
-        of bloody revenge.","popularity":153.632,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
+        of bloody revenge.","popularity":203.45,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
-        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.708,"vote_count":19034}'
-  recorded_at: Fri, 01 Dec 2023 22:35:21 GMT
+        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.709,"vote_count":19085}'
+  recorded_at: Mon, 11 Dec 2023 22:02:01 GMT
 recorded_with: VCR 6.2.0
