--- a/spec/fixtures/vcr_cassettes/User_Dashboard_Page/I_should_see_the_viewing_parties_that_the_user_has_been_invited_to_with_the_following_details_.yml
+++ b/spec/fixtures/vcr_cassettes/User_Dashboard_Page/I_should_see_the_viewing_parties_that_the_user_has_been_invited_to_with_the_following_details_.yml
@@ -24,8 +24,6 @@ http_interactions:
       - chunked
       Connection:
       - keep-alive
-      Date:
-      - Fri, 01 Dec 2023 22:26:49 GMT
       Server:
       - openresty
       X-Memc:
@@ -33,24 +31,26 @@ http_interactions:
       X-Memc-Key:
       - 5dfd93b8685f3044b4e3a03ef882eddf
       X-Memc-Age:
-      - '3120'
+      - '4499'
       X-Memc-Expires:
-      - '20479'
+      - '19377'
+      Date:
+      - Mon, 11 Dec 2023 22:02:03 GMT
       Etag:
-      - W/"de6b8483b176e09dcd5936b00a3ffebd"
+      - W/"5a5d7966e680698aa51f1b2753649cd5"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Miss from cloudfront
+      - RefreshHit from cloudfront
       Via:
-      - 1.1 4c71a5f39a98bd4e98b87c3d62392ece.cloudfront.net (CloudFront)
+      - 1.1 649e92b251b584632a2d3462342d816a.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - IAH50-C4
+      - SFO53-C1
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - 0ae05Hr5VOhkjm_dZ2TRoZRxckS59Dsb3iEuWgHjfzX2W5MuE15e_Q==
+      - To1xwIl3Ha1GU6d0nksRzzR_iPCKBJNXrhJlMQQQIvk5bviLzTQKQg==
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/4qCqAdHcNKeAHcK8tJ8wNJZa9cx.jpg","belongs_to_collection":{"id":10,"name":"Star
@@ -60,12 +60,12 @@ http_interactions:
         forces in their effort to take over the galactic Empire. Venturesome Luke
         Skywalker and dashing captain Han Solo team together with the loveable robot
         duo R2-D2 and C-3PO to rescue the beautiful princess and restore peace and
-        justice in the Empire.","popularity":97.011,"poster_path":"/6FfCtAuVAW8XJjZ7eWeLibRLWTw.jpg","production_companies":[{"id":1,"logo_path":"/o86DbpburjxrqAzEDhXZcyE8pDb.png","name":"Lucasfilm
+        justice in the Empire.","popularity":109.1,"poster_path":"/6FfCtAuVAW8XJjZ7eWeLibRLWTw.jpg","production_companies":[{"id":1,"logo_path":"/tlVSws0RvvtPBwViUyOFAO0vcQS.png","name":"Lucasfilm
         Ltd.","origin_country":"US"},{"id":25,"logo_path":"/qZCc1lty5FzX30aOCVRBLzaVmcp.png","name":"20th
         Century Fox","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1977-05-25","revenue":775398007,"runtime":121,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"A
-        long time ago in a galaxy far, far away...","title":"Star Wars","video":false,"vote_average":8.204,"vote_count":19354}'
-  recorded_at: Fri, 01 Dec 2023 22:25:38 GMT
+        long time ago in a galaxy far, far away...","title":"Star Wars","video":false,"vote_average":8.2,"vote_count":19389}'
+  recorded_at: Mon, 11 Dec 2023 22:02:03 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/120?api_key=c5d87ff6f6c9e5b4d80f024fe25ecdf9
@@ -90,8 +90,6 @@ http_interactions:
       - chunked
       Connection:
       - keep-alive
-      Date:
-      - Fri, 01 Dec 2023 22:26:49 GMT
       Server:
       - openresty
       X-Memc:
@@ -99,24 +97,26 @@ http_interactions:
       X-Memc-Key:
       - c08d8c0e8db4f65ba68fda321b06ca46
       X-Memc-Age:
-      - '11576'
+      - '2566'
       X-Memc-Expires:
-      - '16476'
+      - '19035'
+      Date:
+      - Mon, 11 Dec 2023 22:02:03 GMT
       Etag:
-      - W/"a5391e7f50683ead8a9d5e83a571680d"
+      - W/"679f6734bb06c23402a7b60db981f370"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Miss from cloudfront
+      - RefreshHit from cloudfront
       Via:
-      - 1.1 473981974bcdf9876b1f81355f227d4c.cloudfront.net (CloudFront)
+      - 1.1 cc58556a6e846289f4d3105969536e4c.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - IAH50-C4
+      - SFO53-C1
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - afNxlM8Q7mXAK3LJ55bo3_M1IIZoNlAdWUIeQY2QtHPky9ISInhI2A==
+      - pJAmghiUfhJBBVQCfqt42PGsScwTYTembEc2DtOr6VftVeIrl3BT2Q==
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/x2RS3uTcsJJ9IfjNPcgDmukoEcQ.jpg","belongs_to_collection":{"id":119,"name":"The
@@ -126,12 +126,12 @@ http_interactions:
         his home in order to keep it from falling into the hands of its evil creator.
         Along the way, a fellowship is formed to protect the ringbearer and make sure
         that the ring arrives at its final destination: Mt. Doom, the only place where
-        it can be destroyed.","popularity":131.581,"poster_path":"/6oom5QYQ2yQTMJIbnvbkBL9cHo6.jpg","production_companies":[{"id":12,"logo_path":"/mevhneWSqbjU22D1MXNd4H9x0r0.png","name":"New
+        it can be destroyed.","popularity":177.017,"poster_path":"/6oom5QYQ2yQTMJIbnvbkBL9cHo6.jpg","production_companies":[{"id":12,"logo_path":"/iaYpEp3LQmb8AfAtmTvpqd4149c.png","name":"New
         Line Cinema","origin_country":"US"},{"id":11,"logo_path":"/6FAuASQHybRkZUk08p9PzSs9ezM.png","name":"WingNut
-        Films","origin_country":"NZ"},{"id":5237,"logo_path":null,"name":"The Saul
-        Zaentz Company","origin_country":"US"}],"production_countries":[{"iso_3166_1":"NZ","name":"New
+        Films","origin_country":"NZ"},{"id":5237,"logo_path":"/mlnr7vsBHvLye8oEb5A76C0t8x9.png","name":"The
+        Saul Zaentz Company","origin_country":"US"}],"production_countries":[{"iso_3166_1":"NZ","name":"New
         Zealand"},{"iso_3166_1":"US","name":"United States of America"}],"release_date":"2001-12-18","revenue":871368364,"runtime":179,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"One
         ring to rule them all","title":"The Lord of the Rings: The Fellowship of the
-        Ring","video":false,"vote_average":8.405,"vote_count":23593}'
-  recorded_at: Fri, 01 Dec 2023 22:25:38 GMT
+        Ring","video":false,"vote_average":8.406,"vote_count":23638}'
+  recorded_at: Mon, 11 Dec 2023 22:02:03 GMT
 recorded_with: VCR 6.2.0
